# eosc-ssds-2026

./: .gitignore  README.md  intro.md  myst.yml  pyproject.toml
.github/workflows/: book.yml
practise/: readme.md
preparation/: pyproject.toml  readme.md  secrets.sample
session1/: readme.md
session1/notebooks/: 1_notebook-basics.ipynb  2_ai-assistant-basics.ipynb  3_ai-assistant-advanced.ipynb  4_ds-workflow.ipynb  my-plan.md  penguin_data_exploration.ipynb
session2/: readme.md
session2/data/: data_dictionary.md  field_samples_raw.csv
session2/notebooks/: 1_toolbelt-overview.ipynb  2_data-validation.ipynb  3_quality-report.ipynb  4_metadata-packaging.ipynb  5_dmp-and-deposit.ipynb  dmp_draft.md
session2/outputs/: data_schema.yml  datapackage.json  field_samples_clean.csv  quality_report_clean.html  quality_report_raw.html
slides/: session-2.pptx
